fablr/static/css/app.css
/* ... */
/* Per */

.world_item {
  border: 1px solid #ccc;
  border-radius: 5px;
  margin: 3px 3px 9px 3px;
  padding: 15px;
}

.world_item h3 {
  margin: 0px;
}

@media (min-width: 768px) {
	.navbar-right {
		margin-right: 0px !important;
	}
}


.nav-header {
  padding: 3px 0px;
  font-weight: 600;
  color: #999;
  text-transform: uppercase;
  margin-right: 10px;
}

.worldheader .navbar-brand {
	margin-left: 0px !important;
}

.nav.content-menu {
	font-size: 12px !important;
	margin-left: 4px;
	margin-right: 4px;
}

.nav.content-menu  a {
	padding: 6px 10px;
}

.content-menu .content-menu-info a {
	display: inline;
	margin-right: 0px;
	padding: 0px;
}

.content-menu-info {
	padding: 6px 10px;
	color: #999;
}

.content-panel .panel {
	padding: 10px;
	border-top: none;
}

.articlesave {
	float: right !important;
	top: -4px;
	right: 10%;
	padding-left: 8px;
}

#editor-toolbar {
	position: absolute;
	z-index: 1050;
}

#editor-toolbar .tooltip-arrow {
  position: absolute;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
  bottom: -10px;
  left: 50%;
  margin-left: -7px;
  border-width: 10px 10px 0;
  border-top-color: #428bca;
}

.article-meta {
	color: #999;
	margin-bottom: 20px;
	border-top: dashed 1px #999;
	padding-top: 5px;
}

/*.popover-content p {
  font-weight: 600;
  color: #999;
  margin: -15px;
}

.popover-content .close {
  margin-top: -15px;
}

.popover-content .alert-message {
  margin-bottom: 0;
}*/

.wysiwyg-control {
  display: block;
  width: 100%;
  height: auto;
  padding: 6px 12px;
  font-size: 14px;
  line-height: 1.428571429;
  color: #555555;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #cccccc;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
          transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
}

.cards .row {
  display: flex;
}

.product {
	min-height: 100px;
	padding: 15px;
}

.cards .product {
  display: flex;
  flex-direction: column;
}

.product:hover {
	background-color: #eee;
}

.product-image {
	max-width: 80px;
	max-height: 150px;
	padding: 5px 10px;
	float: left;
}

@media (max-width: 767px) {
	.product-image {
		float: right;
	}
}

.product-intro {
  flex: 1 0 auto;
}

.product-intro h3 {
	margin-top: 5px;
	font-size: 18px;
}

.product-details {
	list-style: none;
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 0px;
}
.product-details li {
	display: inline-block;
	padding-right: 5px;
}


.product-type {
	font-size: 12px;
	text-transform: uppercase;
	font-weight: 700;
	color: #aaa;
}

.product-price {
	font-size: 18px;
	color: #000;
	white-space: nowrap;
}

.product-subtotals {
	text-align: right;
}

.product-comment {
border: 1px solid rgba(0,0,0,0);
resize: none;
border-radius: 4px;
-webkit-box-shadow: none;
box-shadow: none;
-webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}
.product-comment:hover {
	border: 1px solid #ccc;
	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
}

tr:hover>td>.btn-delete,
li:hover .btn-delete,
.image-preview:hover .btn-delete,
.row:hover .btn-delete {
  color: #fff;
  background-color: #d9534f;
  border-color: #d43f3a;
}

.btn-delete {
	position: absolute;
	right: 0; top: 0; bottom: 0;
	margin-top: auto;
 	margin-bottom: auto;
	margin-right: -12px;
	height: 24px;
}

.image-preview .btn-delete {
	margin-right: 5px;
	margin-top: 5px;
	height: 40px;

}

.image-selector {
	text-align: center;
	position: relative;
}

.image-upload label {
	font-size: 190px;
	line-height: 200px;
	height: 200px;
	overflow: hidden;
	color: #fff;
	cursor: pointer;
	text-align: center;
	display: block;
	position: relative;
	background: #bbb;
	border-radius: 4px;
}

.image-upload label:hover {
	color: #ddd;
}

.image-upload .btn {
	width: 100%;
	margin-top: 5px;
}

.image-preview-caption {
	display: block;
	width: 100%;
	height: 20px;
	padding: 6px 12px;
	font-size: 10px;
	/* line-height: 1.428571429; */
	/* color: #555; */
	background-color: rgba(255, 255, 255, .90);
	background-image: none;
	border: 1px solid #ccc;
	position: absolute;
	bottom: 0px;
	-webkit-transform: translateY(100%);
	transform: translateY(100%);
	transition: all .5s ease-in-out;
}

.image-container:hover .image-preview-caption {
	-webkit-transform: translateY(0);
	transform: translateY(0);
}

.image-selector .image-preview {
	display: none;
	position: relative;
	overflow: hidden;
}

.image-selector .selected {
	display: inline-block;
}

.image-selector .selected + .image-upload {
	display: none;
}

.image-selector .image-preview img {
	display: block;
	max-width: 100%;
	height: auto;
	max-height: 300px;
}

.social {
  padding-left: 25px;
  padding-top: 10px;
}

.social a:hover {
  text-decoration: none;
}

.social-icon {
	display: inline-block;
	width: 30px;
	height: 30px;
  margin-right: 5px;
}

.socialtw svg:hover #twitter{
  fill: #55acee;
}

.socialfb svg:hover #facebook {
  fill: #44609d;
}

.socialgoogle svg:hover #google {
  fill: #dd4b39;
}

.socialfeed svg:hover #feed {
  fill: #FF6600;
}

.article_text .thumb {
	display: block;
	float: right;
	margin: 10px;
}

.article_text img {
  max-width: 100%;
}

#content-editor {
  border: 1px solid #eee;
  padding: 4px;
}

#content-editor p:hover {
	background-color: #eee;
}

.gallery {
	list-style: none;
	overflow: hidden;
	width: 100%;
  padding: .5vw;
  font-size: 0;
  display: -ms-flexbox;
  -ms-flex-wrap: wrap;
  -ms-flex-direction: column;
  -webkit-flex-flow: row wrap;
  flex-flow: row wrap;
  display: -webkit-box;
  display: flex;
}
/*
.gallerylist .gallery-row {
	margin-bottom: .5rem;
	overflow: hidden;
 	width: 150%;
}

.gallerylist .gallery-row:last-child { margin: 0; }
/* ... */

